src/components/ui/dropdown-menu/dropdown-menu.module.scss
/* reset */
button {
  all: unset;
}

.DropdownMenuContent {
  position: relative;

  max-width: var(--radix-dropdown-menu-content-available-width);
  padding: 12px;

  background-color: var(--color-dark-500);
  border: 1px solid var(--color-dark-100);
  border-radius: 4px;

  .Items {
    > *:not(:last-child) {
      display: flex;
      gap: 5px;
      align-items: center;

      padding: 12px 0;

      border-bottom: 1px solid var(--color-dark-100);
      outline: none;
    }

    > *:last-child {
      display: flex;
      gap: 5px;
      align-items: center;

      padding-top: 12px;

      outline: none;
    }

    > *:first-child {
      padding-top: 0;
    }

    .DropdownMenuItem {
      cursor: pointer;
    }
  }
}

i {
  display: inline-block;

  padding: 4px;

  background: var(--color-dark-500);
  border: solid var(--color-dark-100);
  border-width: 0 1px 1px 0;
}

.arrowUp {
  transform: rotate(45deg);
  margin-top: -4px;
}

.iconButton {
  background: #0f9954;
}

